JsonRpcRequest: Fix constructor to handle null params
List.copyOf() will throw if the list contains a null. Use
Collections.unmodifiableList(new ArrayList<>) instead.